# whitespace-sifter

./: .gitignore  Bee_Movie_Script.txt  Cargo.toml  LICENSE  README.md
bench/: Cargo.toml
bench/benches/: bench.rs
benches/: bench.rs
src/: character.rs  compliance_test.rs  lib.rs  main.rs  msrv_test.rs  sift.rs  sift_preserve_newlines.rs  tests.rs  unsafe_vec.rs
src/whitespace_sifter/: lib.rs
