[package]
name = "whitespace-sifter"
version = "2.3.4"
edition = "2021"
authors = ["JumperBot_"]
description = "Sift duplicate whitespaces away!"
license = "MIT"
keywords = ["duplicate", "sifter", "string", "text", "whitespace"]
categories = ["compression", "development-tools", "text-processing", "value-formatting", "visualization"]
repository = "https://github.com/JumperBot/whitespace-sifter/"
rust-version = "1.79.0"

[dev-dependencies]
# collapse = "0.1.2"
criterion = "0.5.1"
# fast_whitespace_collapse = "0.1.0"

[[bench]]
name = "bench"
harness = false

[lib]
path = "src/lib.rs"
test = true
doctest = true
doc = true
crate-type = ["lib"]
