[package]
name = "whitespace-sifter"
version = "2.3.7"
edition = "2021"
authors = ["JumperBot_"]
description = "Sift duplicate whitespaces away!"
license = "MIT"
keywords = ["duplicate", "sifter", "string", "text", "whitespace"]
categories = ["compression", "development-tools", "text-processing", "value-formatting", "visualization"]
repository = "https://github.com/JumperBot/whitespace-sifter/"
rust-version = "1.79.0"

[lib]
path = "src/lib.rs"
test = true
doctest = true
doc = true
crate-type = ["lib"]

[[bin]]
name = "whitespace-sifter"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.39", features = ["derive"] }
